Fix alignment bug

--- a/portfolio-project/src/components/project-card/project-card.scss
+++ b/portfolio-project/src/components/project-card/project-card.scss
@@ -15,7 +15,7 @@
 				.card-image {
 					order: -1;
 				}
-				
+
 				.card-text-area {
 					order: 1;
 					
@@ -58,6 +58,10 @@
 
 					ul {
 						text-align: left;
+
+						li {
+							padding: 0 1rem 0 0; 
+						}
 					}
 				}
 			}
